[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sameer-graph-lib"
version = "0.2.0"
description = "H3 and NetworkX based route affinity graph toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Sameer", email = "sameerkumarroy073@gmail.com" }
]
dependencies = [
  "h3>=4.0.0",
  "networkx>=3.0",
  "polyline>=2.0"
]
keywords = ["h3", "networkx", "geospatial", "routing", "graph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS"
]

[project.urls]
Homepage = "https://github.com/iams31/sameer_graph_lib"
Repository = "https://github.com/iams31/sameer_graph_lib"
Issues = "https://github.com/iams31/sameer_graph_lib/issues"

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
geo = ["contextily>=1.5", "geopandas>=0.14", "shapely>=2.0"]
motion = ["numpy>=1.24", "pyproj>=3.5"]
dev = ["pytest>=8.0", "build>=1.2", "twine>=5.1"]

[tool.setuptools.packages.find]
where = ["src"]
